--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "engines": { "node": "6.7.0" },
     "scripts": {
-        "start": "node app.js",
-        "monitor": "nodemon app.js",
+        "start": "node index.js",
+        "monitor": "nodemon index.js",
         "test": "mocha -w"
     },
     "dependencies": {
