--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-    "engines": { "node": "6.7.0" },
-    "scripts": {
-        "start": "node index.js",
-        "monitor": "nodemon index.js",
-        "test": "mocha -w"
-    },
-    "dependencies": {
-        "bluebird": "^3.4.6",
-        "express": "^4.14.0",
-        "genv": "^0.1.1"
-    }
+  "engines": {
+    "node": "6.7.0"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "monitor": "nodemon index.js",
+    "test": "mocha -w"
+  },
+  "dependencies": {
+    "bluebird": "^3.4.6",
+    "chalk": "^1.1.3",
+    "csv-parse": "^1.1.7"
+  }
 }
