--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "chalk": "^1.1.3",
-    "cheerio": "^0.22.0"
+    "cheerio": "^0.22.0",
+    "request": "^2.75.0",
+    "request-promise": "^4.1.1"
   }
 }
